--- a/index.html
+++ b/index.html
@@ -6,11 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JEF-RejseGuides</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Mono:wght@600;700&display=swap" rel="stylesheet">
 </head>
+
+
+<!-- FONT FAMILY -->
+<!--
+font-family: 'Montserrat', sans-serif;
+font-family: 'Roboto Mono', monospace;
+-->
+
 
 <body>
     <script src="script.js"></script>
 
+    <!--  NAVIGATION  -->
+    <nav>
+        <div class="logo">
+            <h1>LOGO</h1>
+        </div>
+        <ul>
+            <li>
+                <a href="#">Destinationer</a>
+            </li>
+            <li>
+                <a href="#">FAQ</a>
+            </li>
+            <li>
+                <a href="#">Om Os</a>
+            </li>
+        </ul>
+    </nav>
 
 </body>
 
