--- a/omos.html
+++ b/omos.html
@@ -4,6 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <style>
+        h1 {
+            text-align: center;
+        }
+
+        .sectionwrapper {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            grid-gap: 8vw;
+            max-width: 1000px;
+            margin: 0 auto;
+
+        }
+
+        .column1 {}
+
+        .column2 {}
+
+        .column3 {}
+    </style>
 </head>
 
 <body>
@@ -15,14 +35,23 @@
     </header>
 
     <section id="omos">
+        <h1>Om os</h1>
         <div class="sectionwrapper">
             <div class="column1">
+                <img src="" alt="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. </p>
+
 
             </div>
             <div class="column2">
+                <img src="" alt="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. </p>
+
 
             </div>
             <div class="column3">
+                <img src="" alt="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. </p>
 
             </div>
         </div>
@@ -39,6 +68,4 @@
     </footer>
 
 
-</body>
-
-</html>
+</body></html>
