--- a/index.html
+++ b/index.html
@@ -21,22 +21,30 @@ font-family: 'Roboto Mono', monospace;
     <script src="script.js"></script>
 
     <!--  NAVIGATION  -->
-    <nav>
-        <div class="logo">
-            <h1>LOGO</h1>
-        </div>
-        <ul>
-            <li>
-                <a href="#">Destinationer</a>
-            </li>
-            <li>
-                <a href="#">FAQ</a>
-            </li>
-            <li>
-                <a href="#">Om Os</a>
-            </li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <div class="logo">
+                <h1>LOGO</h1>
+            </div>
+            <ul class="nav-links">
+                <li>
+                    <a href="#">Destinationer</a>
+                </li>
+                <li>
+                    <a href="#">FAQ</a>
+                </li>
+                <li>
+                    <a href="#">Om Os</a>
+                </li>
+            </ul>
+
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+        </nav>
+    </header>
 
 </body>
 
