Whoopsi, rør ikke master

--- a/index.html
+++ b/index.html
@@ -46,6 +46,24 @@ font-family: 'Roboto Mono', monospace;
         </nav>
     </header>
 
+
+
+    <!-- SPLASH -->
+    <section id="splash">
+        <div class="sectionwrapper">
+            <div class="column">
+
+            </div>
+        </div>
+    </section>
+
+    <!-- FAQ -->
+    <section id="faq"></section>
+
+    <!-- TRENDING -->
+    <section id="trending"></section>
+    <footer></footer>
+
 </body>
 
 </html>
