--- a/omos.html
+++ b/omos.html
@@ -7,6 +7,7 @@
     <style>
         h1 {
             text-align: center;
+            color: white;
         }
 
         .sectionwrapper {
@@ -37,6 +38,7 @@
                 display: block;
             }
         }
+
     </style>
 </head>
 
@@ -85,4 +87,6 @@
     </footer>
 
 
-</body></html>
+</body>
+
+</html>
