--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@ font-family: 'Roboto Mono', monospace;
             </div>
             <ul class="nav-links">
                 <li>
-                    <a href="#">Destinationer</a>
+                    <a href="destinationer.html">Destinationer</a>
                 </li>
                 <li>
-                    <a href="#">FAQ</a>
+                    <a href="#faq">FAQ</a>
                 </li>
                 <li>
-                    <a href="#">Om Os</a>
+                    <a href="omos.html">Om Os</a>
                 </li>
             </ul>
 
@@ -49,19 +49,35 @@ font-family: 'Roboto Mono', monospace;
 
 
     <!-- SPLASH -->
-    <section id="splash">
+    <section id="splash"></section>
+
+    <!-- FAQ -->
+    <section id="faq">
         <div class="sectionwrapper">
             <div class="column">
-
+                <h1>FAQ</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur iure totam officiis possimus illum nihil accusantium, non, natus saepe modi facere nulla, blanditiis alias quo necessitatibus incidunt nobis. Repellendus esse eos, aliquid fugit tenetur consequatur eligendi placeat quae facere ad voluptate voluptatum, earum, cum obcaecati reiciendis deleniti! Numquam non nesciunt dolorem nam cupiditate, incidunt sit asperiores? Provident unde quibusdam perspiciatis debitis sunt repellat consequatur fugiat est, saepe neque tenetur, incidunt harum alias aut facilis. Facere, cupiditate veritatis quo doloribus vel quas rem sit quibusdam voluptatem, placeat cumque nostrum, ullam obcaecati commodi. Praesentium nesciunt quisquam eligendi fuga incidunt provident excepturi ad libero impedit dignissimos animi obcaecati illo ipsa ullam aliquid, hic inventore voluptates voluptatum, quo aperiam. Perferendis excepturi amet porro dignissimos esse veniam ratione dolor velit voluptatibus ad a quidem similique odit inventore et, obcaecati, facere quam nostrum cum, omnis mollitia. Earum, cum, modi? Dolore ex voluptatem tempore dolorem eveniet laborum.</p>
             </div>
         </div>
     </section>
 
-    <!-- FAQ -->
-    <section id="faq"></section>
-
     <!-- TRENDING -->
-    <section id="trending"></section>
+    <section id="trending">
+        <div class="sectionwrapper">
+            <div class="column1">
+                <img class="img1" src="" alt="">
+                <button class="trending-button"></button>
+            </div>
+            <div class="column1">
+                <img class="img2" src="" alt="">
+                <button class="trending-button"></button>
+            </div>
+            <div class="column1">
+                <img class="img3" src="" alt="">
+                <button class="trending-button"></button>
+            </div>
+        </div>
+    </section>
     <footer></footer>
 
 </body>
