--- a/omos.html
+++ b/omos.html
@@ -8,7 +8,31 @@
         h1 {
             text-align: center;
             color: white;
+            display: none;
+            font-family: Roboto Mono;
+            text-transform: uppercase;
+            border-bottom: 1px solid #195B80;
+            margin: 0 12vw;
+
         }
+
+        h2 {
+            font-family: Roboto Mono;
+            text-transform: uppercase;
+        }
+
+        p {
+            font-family: montserrat;
+        }
+
+        img {
+            max-width: 100%;
+            max-height: 100%;
+            margin-top: 2vw;
+
+        }
+
+        /*Grid*/
 
         .sectionwrapper {
             display: grid;
@@ -25,9 +49,7 @@
 
         .column3 {}
 
-        h1 {
-            display: none;
-        }
+        /*Mediaqueries alt over telefon*/
 
         @media screen and (min-width: 600px) {
             body {
@@ -38,7 +60,6 @@
                 display: block;
             }
         }
-
     </style>
 </head>
 
@@ -54,21 +75,21 @@
         <h1>Om os</h1>
         <div class="sectionwrapper">
             <div class="column1">
-                <img src="" alt="">
+                <img src="billeder/profil/federico.jpg" alt="">
                 <h2>Frederik</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. </p>
 
 
             </div>
             <div class="column2">
-                <img src="" alt="">
+                <img src="billeder/profil/jean.jpg" alt="">
                 <h2>Jean</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. </p>
 
 
             </div>
             <div class="column3">
-                <img src="" alt="">
+                <img src="billeder/profil/emilie.jpg" alt="">
                 <h2>Emilie</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. </p>
 
@@ -87,6 +108,4 @@
     </footer>
 
 
-</body>
-
-</html>
+</body></html>
