--- a/destinationer.html
+++ b/destinationer.html
@@ -119,13 +119,12 @@
             max-height: 50%;
         }
 
-<<<<<<< HEAD
-=======
-        body {
+        <<<<<<< HEAD=======body {
             background-color: #8ECBEB;
             z-index: 0;
         }
->>>>>>> html_branch
+
+        >>>>>>>html_branch
     </style>
 </head>
 
@@ -147,10 +146,6 @@
         <button class="filter" data-køn="skiferie">Skiferie</button>
 
 
-<<<<<<< HEAD
-
-=======
->>>>>>> html_branch
     </div>
 
     <section id="popup">
@@ -263,10 +258,7 @@
             this.classList.add("valgt");
             vis(destinationer);
         }
-
     </script>
 
 
-</body>
-
-</html>
+</body></html>
