--- a/destinationer.html
+++ b/destinationer.html
@@ -119,12 +119,10 @@
             max-height: 50%;
         }
 
-        <<<<<<< HEAD=======body {
+        body {
             background-color: #8ECBEB;
             z-index: 0;
         }
-
-        >>>>>>>html_branch
     </style>
 </head>
 
