--- a/index.html
+++ b/index.html
@@ -63,18 +63,19 @@ font-family: 'Roboto Mono', monospace;
 
     <!-- TRENDING -->
     <section id="trending">
+        <h1>Trending</h1>
         <div class="sectionwrapper">
             <div class="column1">
-                <img class="img1" src="" alt="">
-                <button class="trending-button"></button>
+                <img class="img1" src="billeder/billede1.jpg" alt="">
+                <a href="destinationer.html">Dubai</a>
             </div>
             <div class="column1">
-                <img class="img2" src="" alt="">
-                <button class="trending-button"></button>
+                <img class="img2" src="billeder/billede2.jpg" alt="">
+                <a href="destinationer.html">Skagen</a>
             </div>
             <div class="column1">
-                <img class="img3" src="" alt="">
-                <button class="trending-button"></button>
+                <img class="img3" src="billeder/billede3.jpg" alt="">
+                <a href="destinationer.html">Østrig</a>
             </div>
         </div>
     </section>
