--- a/destinationer.html
+++ b/destinationer.html
@@ -119,13 +119,11 @@
             max-height: 50%;
         }
 
-<<<<<<< HEAD
-=======
         body {
             background-color: #8ECBEB;
             z-index: 0;
         }
->>>>>>> html_branch
+
     </style>
 </head>
 
@@ -147,10 +145,7 @@
         <button class="filter" data-køn="skiferie">Skiferie</button>
 
 
-<<<<<<< HEAD
-
-=======
->>>>>>> html_branch
+        <<<<<<< HEAD=======>>>>>>> html_branch
     </div>
 
     <section id="popup">
