--- a/omos.html
+++ b/omos.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         h1 {
             text-align: center;
             color: white;
@@ -60,14 +66,188 @@
                 display: block;
             }
         }
+
+
+        /*  NAVIGATION CSS  */
+        /* NAVIGATION*/
+        nav {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            min-height: 8vh;
+            background-color: #1b709f;
+            font-family: 'Roboto', sans-serif;
+
+            position: fixed;
+            top: 0;
+            width: 100%;
+
+            z-index: 2;
+        }
+
+        .logo {
+            color: #c7c7c7;
+            text-transform: uppercase;
+            letter-spacing: 5px;
+            font-size: 20px;
+        }
+
+        .nav-links {
+            display: flex;
+            justify-content: space-around;
+            width: 30%;
+        }
+
+        .nav-links li {
+            list-style: none;
+        }
+
+        .nav-links li {
+            border-right: 2px solid #c7c7c7;
+        }
+
+        .nav-links li:last-child {
+            border-right: none;
+        }
+
+        .nav-links a {
+            color: #c7c7c7;
+            text-decoration: none;
+            font-weight: lighter;
+            padding-right: 2em;
+        }
+
+        /* BURGER MENU */
+        .burger {
+            display: none;
+        }
+
+        .burger div {
+            width: 25px;
+            height: 3px;
+            background-color: #c7c7c7;
+            margin: 5px;
+
+            transition: all 0.3s ease;
+        }
+
+
+
+
+        @media screen and (max-width: 768px) {
+            body {
+                overflow-x: hidden;
+            }
+
+            .nav-links {
+                position: absolute;
+                right: 0px;
+                height: 92vh;
+                top: 8vh;
+                background-color: #1b709f;
+
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 50%;
+
+                transform: translateX(100%);
+                transition: transform 0.5s ease-in;
+            }
+
+            .nav-links li {
+                border: none;
+                opacity: 0;
+            }
+
+            .burger {
+                display: block;
+                cursor: pointer;
+            }
+        }
+
+        .nav-active {
+            transform: translateX(0);
+        }
+
+        .toggle .line1 {
+            transform: rotate(-45deg) translate(-5px, 6px);
+        }
+
+        .toggle .line2 {
+            opacity: 0;
+        }
+
+        .toggle .line3 {
+            transform: rotate(45deg) translate(-5px, -6px);
+        }
+
+        /* Animationer */
+        @keyframes navLinkFade {
+            from {
+                opacity: 0;
+                transform: translateX(50px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateX(0px);
+            }
+        }
+
+        @media screen and (max-width: 1330px) {
+            .nav-links {
+                width: 38%;
+            }
+
+            body {
+                overflow-x: hidden;
+            }
+        }
+
+        @media screen and (max-width: 1050px) {
+            .nav-links {
+                width: 50%;
+            }
+
+            body {
+                overflow-x: hidden;
+            }
+        }
+
+        .logo {
+            border: none;
+            font-family: 'Roboto Mono', monospace;
+        }
+
     </style>
 </head>
 
 <body>
 
+    <!--  NAVIGATION  -->
     <header>
         <nav>
+            <div class="logo">
+                <img src="billeder/logo/logo.svg" alt="">
+            </div>
+            <ul class="nav-links">
+                <li>
+                    <a href="destinationer.html">Destinationer</a>
+                </li>
+                <li>
+                    <a href="#faq">FAQ</a>
+                </li>
+                <li>
+                    <a href="omos.html">Om Os</a>
+                </li>
+            </ul>
 
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
         </nav>
     </header>
 
@@ -108,4 +288,6 @@
     </footer>
 
 
-</body></html>
+</body>
+
+</html>
