--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@ font-family: 'Roboto Mono', monospace;
     <header>
         <nav>
             <div class="logo">
-                <h1>LOGO</h1>
+                <a href="index.html">
+                    <img src="billeder/logo/logo.svg" alt="JEF-Logo">
+                </a>
+
             </div>
             <ul class="nav-links">
                 <li>
                     <a href="destinationer.html">Destinationer</a>
                 </li>
                 <li>
-                    <a href="#faq">FAQ</a>
+                    <a href="index.html/#faq">FAQ</a>
                 </li>
                 <li>
                     <a href="omos.html">Om Os</a>
@@ -79,7 +82,9 @@ font-family: 'Roboto Mono', monospace;
             </div>
         </div>
     </section>
-    <footer></footer>
+    <footer>
+        <p class="footer-p">JEF-Company A/S</p>
+    </footer>
 
 </body>
 
