New Navi, new omos næsten færdig

--- a/destinationer.html
+++ b/destinationer.html
@@ -285,17 +285,20 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="billeder/logo/logo.svg" alt="">
+                <a href="index.html">
+                    <img src="billeder/logo/logo.svg" alt="JEF-Logo">
+                </a>
+
             </div>
             <ul class="nav-links">
                 <li>
                     <a href="destinationer.html">Destinationer</a>
                 </li>
                 <li>
-                    <a href="#faq">FAQ</a>
+                    <a href="index.html/#faq">FAQ</a>
                 </li>
                 <li>
-                    <a href="omos.html">Om Os</a>
+                    <a href="omos2.html">Om Os</a>
                 </li>
             </ul>
 
@@ -306,6 +309,7 @@
             </div>
         </nav>
     </header>
+
 
     <h1>ALLE</h1>
 
