--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ font-family: 'Roboto Mono', monospace;
                     <a href="destinationer.html">Destinationer</a>
                 </li>
                 <li>
-                    <a href="index.html/#faq">FAQ</a>
+                    <a href="index.html">FAQ</a>
                 </li>
                 <li>
-                    <a href="omos.html">Om Os</a>
+                    <a href="omos2.html">Om Os</a>
                 </li>
             </ul>
 
