--- a/omos2.html
+++ b/omos2.html
@@ -25,7 +25,7 @@
                     <a href="destinationer.html">Destinationer</a>
                 </li>
                 <li>
-                    <a href="index.html/#faq">FAQ</a>
+                    <a href="index.html">FAQ</a>
                 </li>
                 <li>
                     <a href="omos2.html">Om Os</a>
