--- a/destinationer.html
+++ b/destinationer.html
@@ -287,6 +287,7 @@
         .logo h1 {
             font-family: 'Roboto Mono', monospace;
         }
+
     </style>
 </head>
 
@@ -307,11 +308,7 @@
                     <a href="destinationer.html">Destinationer</a>
                 </li>
                 <li>
-<<<<<<< HEAD
                     <a href="index.html">FAQ</a>
-=======
-                    <a href="index.html/faq">FAQ</a>
->>>>>>> origin/master
                 </li>
                 <li>
                     <a href="omos2.html">Om Os</a>
@@ -452,7 +449,10 @@
             this.classList.add("valgt");
             vis(destinationer);
         }
+
     </script>
 
 
-</body></html>
+</body>
+
+</html>
