--- a/destinationer.html
+++ b/destinationer.html
@@ -307,7 +307,7 @@
                     <a href="destinationer.html">Destinationer</a>
                 </li>
                 <li>
-                    <a href="index.html/faq">FAQ</a>
+                    <a href="index.html">FAQ</a>
                 </li>
                 <li>
                     <a href="omos2.html">Om Os</a>
