Al CSS og JS smidt i hver deres fil

--- a/destinationer.html
+++ b/destinationer.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JEF-RejseGuides</title>
+    <title></title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Mono:wght@600;700&display=swap" rel="stylesheet">
-    <script src="script.js"></script>
 </head>
 
-
-
 <body>
+    <script src="script.js"></script>
+
     <!--  NAVIGATION  -->
     <header>
         <nav>
@@ -44,9 +42,7 @@
 
 
     <h1>ALLE</h1>
-
     <div class="filtre">
-
         <button class="filter" data-køn="europa">Europa</button>
         <button class="filter" data-køn="nordamerika">Nordamerika</button>
         <button class="filter" data-køn="asien">Asien</button>
@@ -55,52 +51,35 @@
         <button class="filter" data-køn="storbyferie">Storbyferie</button>
         <button class="filter" data-køn="solferie">Solferie</button>
         <button class="filter" data-køn="skiferie">Skiferie</button>
-
     </div>
 
     <section id="popup">
-
         <article>
-
             <div id="luk">X</div>
             <h2></h2>
             <img src="" alt="">
             <section>
-
                 <h2><span class="navn"></span></h2>
                 <p> <span class="beskrivelse"></span></p>
                 <p><span class="oprindelse"></span></p>
                 <img src="" alt="">
-
-
             </section>
-
         </article>
-
     </section>
 
-
-    <section id="container">
-
-    </section>
+    <section id="container"></section>
 
     <template>
-
-
         <article>
             <h2></h2>
             <img src="" alt="">
             <h2 class="navn"></h2>
             <p class="kort"></p>
             <p class="pris"></p>
-
-
         </article>
     </template>
 
-    <script>
 
-    </script>
+</body>
 
-
-</body></html>
+</html>
