Ændringer i JS og CSS - al smidt i hver sin fil

--- a/destinationer.html
+++ b/destinationer.html
@@ -2,12 +2,10 @@
 <html lang="">
 
 <head>
-<<<<<<< HEAD
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="style.css">
-=======
     <meta charset="UTF-8">
     <title>Document</title>
 
@@ -293,9 +291,8 @@
         .logo h1 {
             font-family: 'Roboto Mono', monospace;
         }
-
     </style>
->>>>>>> origin/master
+
 </head>
 
 <body>
@@ -369,8 +366,6 @@
         </article>
     </template>
 
-<<<<<<< HEAD
-=======
     <script>
         let filter = "alle";
         let destinationer;
@@ -441,15 +436,6 @@
             this.classList.add("valgt");
             vis(destinationer);
         }
-
     </script>
->>>>>>> origin/master
 
-</body>
-
-<<<<<<< HEAD
-=======
-</body>
-
->>>>>>> origin/master
-</html>
+</body></html>
