"om os"-tekst om emilie + skriftstørrelser i em istedet for px

--- a/omos2.html
+++ b/omos2.html
@@ -60,8 +60,9 @@
             <div class="column2">
                 <img src="billeder/profil/emilie.jpg" alt="">
                 <h2>Emilie</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. </p>
+                <p>Jeg elsker at tage et sted hen, hvor solen virkelig varmer, når det er ekstra koldt herhjemme. Jeg elsker også at være ved kysten, så det er derfor ofte et kriterie for mit valg af destination, at havet er tilgængeligt. På denne slags rejser kan jeg godt lide, at der er andet at se og opleve end en pool. Forstå mig ret, jeg sætter pris på afslapning på ferier, men at have kulturelle oplevelser med hjem i rygsækken vægter højest for mig. I den helt anden ende af spektret, har vi jo skiferier, som også er en storfavorit i mine øjne. Hvis der er gået et år, hvor jeg ikke har været et smut nede og hilse på alperne, har det ikke været et godt år. <br><br> Sidst men ikke mindst tror jeg også på, at man ikke behøver at tage særlig langt væk for at opleve noget nyt og spændende. Vores lille kongerige er et land fyldt med smuk og imponerende natur, små og større hyggelige byer med hver deres unikke charme og områder, der bare venter på at blive udforsket. Jeg anbefaler derfor klart at tage på opdagelse i Dankmark. Det er jeg ihvertfald ikke færdig med endnu.</p>
 
+                <h3>Næste rejsemål: Tokyo, Japan</h3>
             </div>
         </div>
 
@@ -73,6 +74,4 @@
     </footer>
 
 
-</body>
-
-</html>
+</body></html>
