--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ font-family: 'Roboto Mono', monospace;
 -->
 
 
-<body>
+<body class="forside">
     <script src="script.js"></script>
 
     <!--  NAVIGATION  -->
@@ -77,7 +77,7 @@ font-family: 'Roboto Mono', monospace;
                 <a href="destinationer.html">Skagen</a>
             </div>
             <div class="column1">
-                <img class="img3" src="billeder/billede3.jpg" alt="">
+                <img class="img3" src="billeder/billede6.jpg" alt="">
                 <a href="destinationer.html">Østrig</a>
             </div>
         </div>
