--- a/omos2.html
+++ b/omos2.html
@@ -53,7 +53,10 @@
             <div class="column2">
                 <img src="billeder/profil/jean.jpg" alt="">
                 <h2>Jean</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. </p>
+                <p>Jeg elsker at tage ud og rejse! Jeg har selv rejst i over 40 lande, og jeg kommer med egne erfaringer og anbefalinger så du kan komme ud og rejse en tur som kan opleves på egen hånd, som bliver helt uforglemmelig. Jeg ved at rejsen er bedst, når man får lov til at komme tæt på de lande, områder og kulturer, som man forblindes af. Det er mig der fører dig videre til dér hvor vejene bliver til stier, og betongen bliver til skov; at din rejse er uforglemmelig. God rejse!
+                </p>
+
+                <h3>Næste rejsemål: Seoul, Sydkorea</h3>
 
 
             </div>
@@ -74,4 +77,6 @@
     </footer>
 
 
-</body></html>
+</body>
+
+</html>
