indhold til omos - Frederik

--- a/omos2.html
+++ b/omos2.html
@@ -46,14 +46,18 @@
             <div class="column2">
                 <img src="billeder/profil/federico.jpg" alt="">
                 <h2>Frederik</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel saepe, aliquid ullam, totam dicta molestias ea quibusdam, deserunt quod incidunt laudantium nostrum libero sapiente, esse. Harum qui nisi, vitae nemo. </p>
+                <p>Jeg har både været på mange bilferier, men også rejst en del med fly, da jeg var yngre sammen med mine forældre. Utallige charterferier er blevet oplevet i solens hede, dog også med plads til aktivitetsrejser såsom forlystelsespark ferie i Orland, Florida. Desuden har jeg boet halvandet år i Dubai fra midt 2012 til 2014, hvilket var en meget givende og udviklende rejse. Ferier med en vifte af aktiviteter er jeg fan af, dvs. rejser der har lidt af hvert at byde på med både kulturelle indspark samt lidt mere fysisk krævende initiativer.
+                    <br><br>Skiferier blandt andet har jeg på min “must-do” liste, da det er en af de få ferietyper jeg ikke har haft fornøjelsen af. Dertil må jeg blankt erkende at sol- og daseferier ikke lige er min kop te, det bliver simpelthen for trivielt.<br><br>
+                </p>
+
+                <h3>Næste rejsemål: Alperne, Øsrtig</h3>
 
 
             </div>
             <div class="column2">
                 <img src="billeder/profil/jean.jpg" alt="">
                 <h2>Jean</h2>
-                <p>Jeg elsker at tage ud og rejse! Jeg har selv rejst i over 40 lande, og jeg kommer med egne erfaringer og anbefalinger så du kan komme ud og rejse en tur som kan opleves på egen hånd, som bliver helt uforglemmelig. Jeg ved at rejsen er bedst, når man får lov til at komme tæt på de lande, områder og kulturer, som man forblindes af. Det er mig der fører dig videre til dér hvor vejene bliver til stier, og betongen bliver til skov; at din rejse er uforglemmelig. God rejse!
+                <p>Jeg elsker at tage ud og rejse! Jeg har selv rejst i over 40 lande, og jeg kommer med egne erfaringer og anbefalinger så du kan komme ud og rejse en tur som kan opleves på egen hånd, som bliver helt uforglemmelig. Jeg ved at rejsen er bedst, når man får lov til at komme tæt på de lande, områder og kulturer, som man forblindes af. Det er mig der fører dig videre til dér hvor vejene bliver til stier, og betongen bliver til skov; at din rejse er uforglemmelig. God rejse!<br><br>
                 </p>
 
                 <h3>Næste rejsemål: Seoul, Sydkorea</h3>
@@ -63,7 +67,7 @@
             <div class="column2">
                 <img src="billeder/profil/emilie.jpg" alt="">
                 <h2>Emilie</h2>
-                <p>Jeg elsker at tage et sted hen, hvor solen virkelig varmer, når det er ekstra koldt herhjemme. Jeg elsker også at være ved kysten, så det er derfor ofte et kriterie for mit valg af destination, at havet er tilgængeligt. På denne slags rejser kan jeg godt lide, at der er andet at se og opleve end en pool. Forstå mig ret, jeg sætter pris på afslapning på ferier, men at have kulturelle oplevelser med hjem i rygsækken vægter højest for mig. I den helt anden ende af spektret, har vi jo skiferier, som også er en storfavorit i mine øjne. Hvis der er gået et år, hvor jeg ikke har været et smut nede og hilse på alperne, har det ikke været et godt år. <br><br> Sidst men ikke mindst tror jeg også på, at man ikke behøver at tage særlig langt væk for at opleve noget nyt og spændende. Vores lille kongerige er et land fyldt med smuk og imponerende natur, små og større hyggelige byer med hver deres unikke charme og områder, der bare venter på at blive udforsket. Jeg anbefaler derfor klart at tage på opdagelse i Dankmark. Det er jeg ihvertfald ikke færdig med endnu.</p>
+                <p>Jeg elsker at tage et sted hen, hvor solen virkelig varmer, når det er ekstra koldt herhjemme. Jeg elsker også at være ved kysten, så det er derfor ofte et kriterie for mit valg af destination, at havet er tilgængeligt. På denne slags rejser kan jeg godt lide, at der er andet at se og opleve end en pool. Forstå mig ret, jeg sætter pris på afslapning på ferier, men at have kulturelle oplevelser med hjem i rygsækken vægter højest for mig. I den helt anden ende af spektret, har vi jo skiferier, som også er en storfavorit i mine øjne. Hvis der er gået et år, hvor jeg ikke har været et smut nede og hilse på alperne, har det ikke været et godt år. <br><br> Sidst men ikke mindst tror jeg også på, at man ikke behøver at tage særlig langt væk for at opleve noget nyt og spændende. Vores lille kongerige er et land fyldt med smuk og imponerende natur, små og større hyggelige byer med hver deres unikke charme og områder, der bare venter på at blive udforsket. Jeg anbefaler derfor klart at tage på opdagelse i Dankmark. Det er jeg ihvertfald ikke færdig med endnu.<br><br></p>
 
                 <h3>Næste rejsemål: Tokyo, Japan</h3>
             </div>
@@ -77,6 +81,4 @@
     </footer>
 
 
-</body>
-
-</html>
+</body></html>
