Østrig_ændring_html

--- a/omos2.html
+++ b/omos2.html
@@ -50,7 +50,7 @@
                     <br><br>Skiferier blandt andet har jeg på min “must-do” liste, da det er en af de få ferietyper jeg ikke har haft fornøjelsen af. Dertil må jeg blankt erkende at sol- og daseferier ikke lige er min kop te, det bliver simpelthen for trivielt.<br><br>
                 </p>
 
-                <h3>Næste rejsemål: Alperne, Øsrtig</h3>
+                <h3>Næste rejsemål: Alperne, Østrig</h3>
 
 
             </div>
